--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,8 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "erp.easy"]
+	path = erp.easy
+	url = https://github.com/mooretm/erp.easy
+	shallow = true
+	registered = true
